Update HTML and CSS styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="js/lib/stats.js"></script>
   </head>
 
-  <body id="body">
+  <body id="body" >
     <nav
       class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600"
     >
@@ -108,7 +108,7 @@
       <div class="first-animate"  >
         <img
           src="images/logo.png"
-          style="width: 100px; margin-bottom: 20px; margin-top: 15%"
+          style="width: 100px; margin-bottom: 20px; margin-top: -100px;"
           class="animate-bounce"
         />
         <h1 class="text-2xl font-bold font-mono text-center">
@@ -126,7 +126,7 @@
     </section>
     <section style="height: 100vh" id="tigger1">
       
-      <h1>Thura Lin Htut is the best</h1>
+      <h1 class="text-2xl">We developed many website and application for our client in the moment </h1>
       <div class="bs" id="bs">
         <p>The best solution for software development</p>
       </div>
