--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <link rel="stylesheet" href="style/css/index.css" />
     <link rel="stylesheet" href="style/css/partical.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -105,7 +106,7 @@
   
     <section class="first_section" >
       <div id="particles-js"></div>
-      <div class="first-animate"  >
+      <div class="first-animate" id="goanimate" >
         <img
           src="images/logo.png"
           style="width: 100px; margin-bottom: 20px; margin-top: -100px;"
@@ -122,6 +123,25 @@
           <a href="#_"> Get Started </a>
           <i class="bi bi-arrow-right"></i>
         </div>
+      </div>
+
+      <div class="container landcontainer" id="tigger2">
+        <div class="flex flex-row">
+          <div class="cardglass">
+            <i class="bi bi-people text-2xl"></i>
+            <h1 class="text-mdfont-mono">User Client</h1>
+            <h2 class="text-lg font-mono">5000+</h2>
+          </div>
+
+          <div class="cardglass">
+            <i class="bi bi-code-slash text-2xl"></i>
+            <h1 class="text-mdfont-mono">Active Software</h1>
+            <h2 class="text-lg font-mono">2500+</h2>
+          </div>        
+           
+     </div>
+     <img src="images/swphone.png" class="phoneimg" alt="phone image" />
+       
       </div>
     </section>
     <section style="height: 100vh" id="tigger1">
@@ -156,33 +176,32 @@
   requestAnimationFrame(update);
 </script>
 <script>
-  var controller = new ScrollMagic.Controller();
+  // var controller = new ScrollMagic.Controller();
 
-  var tween = gsap.to("#bs", 1, {
-    opacity: 0,
-    y: -100,
-    scale: 0.5,
+  // var tween = gsap.to("#bs", 1, {
+  //   opacity: 0,
+  //   y: -100,
+  //   scale: 0.5,
+  //   rotation: 360,
+  //   backgroundColor: "blue",
+  //   ease: "power1.inOut",
+  // });
+
+  gsap.registerPlugin(ScrollTrigger);
+
+  gsap.to("landcontainer", {
+    scrollTrigger: {
+      trigger: "#tigger1",
+      start: "top center",
+      end: "bottom center",
+      scrub: 1,
+      markers: true,
+    },
+    x: 500,
     rotation: 360,
+    scale: 0.5,
     backgroundColor: "blue",
     ease: "power1.inOut",
   });
 
-  var scene = new ScrollMagic.Scene({
-    triggerElement: "#tigger1",
-    offset: -500,
-    duration: 400,
-    triggerHook: 0,
-  })
-    .setTween(tween)
-    .setPin("#section2")
-
-    .addIndicators()
-    .addTo(controller);
-
-  var scene2 = new ScrollMagic.Scene({
-    triggerElement: "#tigger1",
-  })
-    .setClassToggle("#body", "changebody")
-    .addTo(controller)
-    .addIndicators();
 </script>
