Update icon and heading size in index.html

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <section style="height: 100vh" class="second_section">
         <div style="width: 70%">
           <div>
-            <i class="bi bi-code-square text-2xl"></i>
+            <i class="bi bi-award text-4xl"></i>
             <h1 class="text-2xl font-bold font-sans">Learning Platform</h1>
           </div>
           <p class="text-lg" style="width: 70%">
