Update page titles and fix button onclick event

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
           <button
             type="button"
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-          >
+            onclick="window.location.href='store.html'"
+            >
             Get started
           </button>
           <button
@@ -120,8 +121,10 @@
             Synapse Work is the most powerful and easy to use platform for
             building software applications.
           </p>
-          <div class="getstartedbtn cursor-pointer" style="margin-top: 20px">
-            <a href="#_"> Get Started </a>
+          <div class="getstartedbtn cursor-pointer" style="margin-top: 20px"
+            onclick="window.location.href='#second_section'"
+          >
+            <a href="#second_section"> Get Started </a>
             <i class="bi bi-arrow-right"></i>
           </div>
         </div>
@@ -142,7 +145,7 @@
           </div>
         </div>
       </section>
-      <section style="height: 100vh" class="second_section">
+      <section style="height: 100vh" class="second_section" id="second_section">
         <div style="width: 70%">
           <div>
             <i class="bi bi-award text-4xl"></i>
@@ -178,7 +181,7 @@
               class="jwot cursor-pointer"
               style="margin-top: 20px; background-color: none"
             >
-              <a href="#_"> Join With Our Team </a>
+              <a href="developer.html"> Join With Our Team </a>
               <i class="bi bi-arrow-right"></i>
             </div>
           </div>
@@ -248,11 +251,11 @@
 
        <div class="ownlist">
         <ul class="list-disc">
-           <li>Synapse Work</li>
-           <li>Pascal X</li>
-           <li>Useful Software Myanmar</li>
-           <li>RapidRetail POS</li>
-           <li>UCSD Voting</li>
+           <li><a href="index.html">Synapse Work</a></li>
+           <li><a href="pascalx.html">Pascal X</a></li>
+           <li><a href="https://facebook.com/usefulsoftwaremyanmar">Useful Software Myanmar</a></li>
+           <li><a href="https://facebook.com/rapidretail">RapidRetail POS</a></li>
+           <li><a href="https://empiretylh.github.io/ucsdvote">UCSD Voting </a></li>
           </ul>
        </div>
 
@@ -474,8 +477,8 @@
                 <li><a href="store.html">Store</a></li>
                 <li><a href="pascalx.html">Pascal X</a></li>
                 <li><a href="service.html">Services</a></li>
-                <li><a href="#contactus">Contact Us</a></li>
-                <li><a href="#developer">Developer</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="developer.html">Developer</a></li>
               </ul>
             </div>
             
