--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Synapse Work</title>
+    <title>Synapse Work - Contact Us</title>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
@@ -37,13 +37,14 @@
             style="object-fit: contain"
             alt="Synapse Work Logo"
           />
-          <h1 class="logo-text">Synapse Work</h1>
+          <h1 class="logo-text">Synapse Work </h1>
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
           <button
             type="button"
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-          >
+            onclick="window.location.href='store.html'"
+            >
             Get started
           </button>
           <button
