Fix developer links and update developer name
This commit fixes the links to the developer's GitHub and Facebook profiles in the developer.html file. It also updates the name of the developer from "Shwe Yi Tun" to "Shwe Yee Tun" in both the developer.html and index.html files.

--- a/developer.html
+++ b/developer.html
@@ -163,12 +163,12 @@
             </p>
             <ul>
               <li>
-                <a href="www.github.com/empiretylh">
+                <a href="https://www.github.com/empiretylh">
                   <i class="bi bi-github"></i>
                 </a>
               </li>
               <li>
-                <a href="www.facebook.com/thuralinhtut.developer">
+                <a href="https://www.facebook.com/thuralinhtut.developer">
                   <i class="bi bi-facebook"></i>
                 </a>
               </li>
@@ -227,10 +227,10 @@
           </div>
 
           <div class="service-card">
-            <img src="images/syt.jpg" alt="shweyitun" class="developer-img"/>
-            <h1 class="text-2xl font-bold">Shwe Yi Tun</h1>
+            <img src="images/syt.jpg" alt="shweyeetun" class="developer-img"/>
+            <h1 class="text-2xl font-bold">Shwe Yee Tun</h1>
             <p class="text-sm">
-              Shwe Yi Tun is a UI/UX designer and content-writer at Synapse Work.
+              Shwe Yee Tun is a UI/UX designer and content-writer at Synapse Work.
               She is a student at University of Computer Studies, Dawei.
             </p>
             <ul>
