--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
               <div class="content">
                 <div class="back">
                   <div class="back-content">
-                    <img src="images/syt.jpg" alt="shweeyeetun" class="avatar" width="100%"/>
-                    <strong>Shwee Yee Tun</strong>
+                    <img src="images/syt.jpg" alt="shweyeetun" class="avatar" width="100%"/>
+                    <strong>Shwe Yee Tun</strong>
 
                   </div>
                 </div>
                 <div class="front">
                   
                   <div class="img">
-                    <img src="images/syt.jpg" alt="shweeyeetun" class="avatar" width="100%"/>
+                    <img src="images/syt.jpg" alt="shweyeetun" class="avatar" width="100%"/>
                   </div>
             
                   <div class="front-content">
